为HttpsUtil增加https协议请求的代理身份验证